fixed dark mode background

--- a/style.css
+++ b/style.css
@@ -253,7 +253,7 @@ a {
 }
 
 html {
-  color: white;
+  background-color: white;
 }
 
 html.dark {
